Set colors for commission protocols, navigate itemsList region in commission decisions

--- a/CommissionsModule/Views/CommissionsListView.xaml
+++ b/CommissionsModule/Views/CommissionsListView.xaml
@@ -37,7 +37,7 @@
                  SelectedItem="{Binding SelectedCommission}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Border Background="{Binding StatusColor}" Margin="0">
+                    <Border Background="{Binding DecisionColorHex}" Margin="0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
