--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -1,7 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:views="clr-namespace:CommissionsModule.Views">
+                    xmlns:views="clr-namespace:CommissionsModule.Views"
+                    xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/CommissionDecisionView.xaml" />
     </ResourceDictionary.MergedDictionaries>
+
+    <DataTemplate DataType="{x:Type viewModels:CommissionDecisionEditorViewModel}">
+        <views:CommissionDecisionEditorView/>
+    </DataTemplate>
 </ResourceDictionary>
