--- a/CommissionsModule/Views/CommissionDecisionEditorView.xaml
+++ b/CommissionsModule/Views/CommissionDecisionEditorView.xaml
@@ -34,11 +34,10 @@
                                        SelectedItem="{Binding SelectedDecision}"
                                        DisplayMemberPath="Name"
                                        ItemTemplate="{StaticResource DecisionsTree}"
-                                       SelectionPredicate="{x:Static data:Decision.DecisionSelectorPredicate}"
                                        FilterPredicate="{x:Static data:Decision.DecisionFilterPredicate}"/>
         <TextBlock Grid.Row="1" Grid.Column="0">Рекомендации/комментарий</TextBlock>
         <TextBox Grid.Row="1" Grid.Column="1" MaxLines="4" Text="{Binding Comment}"/>
-        <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="{Binding NeedDecisionInDateTime}">Дата для решения</CheckBox>
-        <DatePicker Grid.Row="2" Grid.Column="1" DisplayDate="{Binding DecisionInDateTime}" IsEnabled="{Binding NeedDecisionInDateTime}" HorizontalAlignment="Left"/>
+        <CheckBox Grid.Row="2" Grid.Column="0" IsChecked="{Binding NeedDecisionDateTime}">Дата для решения</CheckBox>
+        <DatePicker Grid.Row="2" Grid.Column="1" DisplayDate="{Binding DecisionDateTime}" IsEnabled="{Binding NeedDecisionDateTime}" HorizontalAlignment="Left"/>
     </Grid>
 </UserControl>
