--- a/OrganizationContracts/Views/OrgContractsView.xaml
+++ b/OrganizationContracts/Views/OrgContractsView.xaml
@@ -111,40 +111,52 @@
 
                         <Label Grid.Row="0" Grid.Column="0" Content="" />
                         <Label Grid.Row="0" Grid.Column="1" Content="{Binding ContractName}" Margin="2" MinHeight="25" FontWeight="Medium"/>
-                        <Label Grid.Row="1" Grid.Column="0" Content="Ист. финансирования" />
+                        <TextBlock Grid.Row="1" Grid.Column="0">
+                            <Run Text="Источник финансирования" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding FinSources}" 
                               DisplayMemberPath="Field" 
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedFinSourceId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}" Margin="2"/>
-                        <Label Grid.Row="2" Grid.Column="0" Content="Организация" />
+                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Margin="2,2,25,2"/>
+                        <TextBlock Grid.Row="2" Grid.Column="0">
+                            <Run Text="Организация" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Organizations}" 
                               DisplayMemberPath="Field" 
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedOrganizationId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}" Margin="2"/>
-                        <Label Grid.Row="3" Grid.Column="0" Content="Начало действия договора" />
-                        <Label Grid.Row="4" Grid.Column="0" Content="Конец действия договора" />
+                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Margin="2,2,25,2"/>
+                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Начало действия договора" />
+                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Конец действия договора" />
                         <DatePicker Grid.Row="3" Grid.Column="1" 
                                 SelectedDate="{Binding ContractBeginDate, Mode=TwoWay}" 
-                                Width="115" Margin="2" HorizontalAlignment="Left"/>
+                                Width="115" Margin="2,2,25,2" HorizontalAlignment="Left"/>
                         <DatePicker Grid.Row="4" Grid.Column="1" 
                                 SelectedDate="{Binding ContractEndDate, Mode=TwoWay}" 
-                                Width="115" Margin="2" HorizontalAlignment="Left"/>
-                        <Label Grid.Row="5" Grid.Column="0" Content="Сумма по договору (руб.)" />
+                                Width="115" Margin="2,2,25,2" HorizontalAlignment="Left"/>
+                        <TextBlock Grid.Row="5" Grid.Column="0">
+                            <Run Text="Сумма по договору, руб. (0 - безлимит)" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <xctk:IntegerUpDown Grid.Row="5" Grid.Column="1"
                                     Minimum="0" Increment="1" 
                                     ParsingNumberStyle="Integer" TextAlignment="Left"
-                                    Value="{Binding ContractCost}" Margin="2" />
-                        <Label Grid.Row="6" Grid.Column="0" Content="Доп. информация" />
+                                    Value="{Binding ContractCost}" Margin="2,2,25,2" />
+                        <TextBlock Grid.Row="6" Grid.Column="0" Text="Доп. информация" />
                         <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding OrgDetails, UpdateSourceTrigger=PropertyChanged}" MinHeight="23"
-                             TextWrapping="Wrap" AcceptsReturn="True" Margin="2" Height="Auto"/>
-                        <Label Grid.Row="7" Grid.Column="0" Content="Ответственный" />
+                             TextWrapping="Wrap" AcceptsReturn="True" Margin="2,2,25,2" Height="Auto"/>
+                        <TextBlock Grid.Row="7" Grid.Column="0">
+                            <Run Text="Ответственный" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="7" Grid.Column="1" ItemsSource="{Binding Registrators}" 
                               DisplayMemberPath="Field" 
                               SelectedValuePath="Value"
                               SelectedValue="{Binding SelectedRegistratorId, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
-                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplateRightIcon}" Margin="2"/>
+                                            Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" Margin="2,2,25,2"/>
                     </Grid>                    
                 </Grid>
             </Border>
