--- a/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
+++ b/PatientInfoModule/Views/Contracts/PatientContractsView.xaml
@@ -147,14 +147,20 @@
                             <TextBlock VerticalAlignment="Center" Text=" - " Width="10"/>
                             <DatePicker SelectedDate="{Binding ContractEndDateTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="115" Margin="2"/>
                         </StackPanel>
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Источник финансирования" Margin="2"/>
+                        <TextBlock Grid.Row="2" Grid.Column="0" Margin="2">
+                            <Run Text="Источник финансирования" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="2" Grid.Column="1" Margin="2,2,25,2" HorizontalAlignment="Stretch"
                             ItemsSource="{Binding FinancingSources}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Ответственный за договор" Margin="2"/>
+                        <TextBlock Grid.Row="3" Grid.Column="0" Margin="2">
+                            <Run Text="Ответственный за договор" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2,2,25,2"
                             ItemsSource="{Binding Registrators}" 
                             DisplayMemberPath="Field" 
@@ -162,7 +168,10 @@
                             SelectedValue="{Binding SelectedRegistratorId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
 
-                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Заказчик" Margin="2"/>
+                        <TextBlock Grid.Row="4" Grid.Column="0" Margin="2">
+                            <Run Text="Заказчик" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <controls:AutoCompleteTextBox Name="autocomplete" Grid.Row="4" 
                                                 Grid.Column="1" 
                                                 Margin="2,2,25,2" 
@@ -175,26 +184,40 @@
                                                 ItemTemplate="{StaticResource ClientsAutoCompleteTemplate}"/>  
 
                         <TextBlock Grid.Row="5" Grid.Column="0" Text="Потребитель" Margin="2"/>
-                        <TextBox Grid.Row="5" Grid.Column="1" Margin="2,2,25,2" HorizontalAlignment="Stretch" Height="23" Text="{Binding Consumer}" IsReadOnly="True"/>                                
-                        <TextBlock Grid.Row="6" Grid.Column="0" Text="Метод оплаты" Margin="2"/>
+                        <TextBox Grid.Row="5" Grid.Column="1" Margin="2,2,25,2" HorizontalAlignment="Stretch" Height="23" Text="{Binding Consumer}" IsReadOnly="True"/>
+                        <TextBlock Grid.Row="6" Grid.Column="0" Margin="2">
+                            <Run Text="Метод оплаты" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <ComboBox Grid.Row="6" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2,2,25,2"
                             ItemsSource="{Binding PaymentTypes}" 
                             DisplayMemberPath="Field" 
                             SelectedValuePath="Value" 
                             SelectedValue="{Binding SelectedPaymentTypeId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
-                        <TextBlock Grid.Row="7" Grid.Column="0" Text="№ транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+                        <TextBlock Grid.Row="7" Grid.Column="0" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                            <Run Text="№ транзакции" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <TextBox Grid.Row="7" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2,2,25,2" 
                             Text="{Binding TransationNumber, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                             Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
-                        <TextBlock Grid.Row="8" Grid.Column="0" Text="Дата транзакции" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+                        <TextBlock Grid.Row="8" Grid.Column="0" Margin="2" Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+                            <Run Text="Дата транзакции" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         <TextBox Grid.Row="8" Grid.Column="1" Width="300" Height="23" HorizontalAlignment="Left" Margin="2,2,25,2"
                             Text="{Binding TransationDate, Mode=TwoWay, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                             Validation.ErrorTemplate="{StaticResource ValidationTemplate}"    
                             Visibility="{Binding IsCashless, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
+
+                        <TextBlock Grid.Row="9" Grid.Column="0" Margin="2">
+                            <Run Text="Состав договора:" FontWeight="SemiBold" />
+                            <Run Text="*" FontWeight="SemiBold" Foreground="Red" />
+                        </TextBlock>
                         
-                        <Border BorderThickness="1" BorderBrush="Black" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0">
+                        <Border BorderThickness="1" BorderBrush="Black" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Margin="2,2,25,0" >
                             <DockPanel LastChildFill="True">
                                 <TextBlock Text="Оплата" DockPanel.Dock="Left" HorizontalAlignment="Center" Margin="10,0,0,0" FontWeight="Medium"></TextBlock>
                                 <TextBlock Text="Сумма, руб." DockPanel.Dock="Right" HorizontalAlignment="Center" Margin="10,0" FontWeight="Medium"></TextBlock>
@@ -203,7 +226,7 @@
                             </DockPanel>
                         </Border>
 
-                        <ListView Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Margin="3,0,3,2" MinHeight="100" BorderThickness="1,0,1,1" BorderBrush="Black"
+                        <ListView Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2" Margin="2,0,25,2" MinHeight="100" BorderThickness="1,0,1,1" BorderBrush="Black"
                         ItemsSource="{Binding ContractItems, ValidatesOnDataErrors=True}"
                         SelectedItem="{Binding SelectedContractItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         Validation.ErrorTemplate="{StaticResource ValidationTemplate}"  
