--- a/CommissionsModule/Views/Protocols/CommissionsListView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionsListView.xaml
@@ -7,7 +7,7 @@
              xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels"
              xmlns:views="clr-namespace:CommissionsModule.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="300" 
+             d:DesignHeight="600"
              d:DataContext="{d:DesignInstance viewModels:CommissionsListViewModel}">
        
     <Grid>
@@ -20,19 +20,20 @@
         </Grid.RowDefinitions>
         
         <DockPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch">
-            <ComboBox DockPanel.Dock="Top"
+            <ComboBox DockPanel.Dock="Top" Width="200" Margin="2"
                           ItemsSource="{Binding Filters}" 
                           SelectedValue="{Binding SelectedFilter, Mode=TwoWay}"
                           SelectedValuePath="Value" 
                           DisplayMemberPath="Field" />
             <DatePicker DockPanel.Dock="Top" SelectedDate="{Binding FilterDate}" Margin="2"
-                        HorizontalAlignment="Stretch" Width="216"
+                        HorizontalAlignment="Stretch" Width="200"
                         Visibility="{Binding ShowDateFilter, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
             <CheckBox DockPanel.Dock="Top" 
                       Content="Мои комиссии" Margin="2,0,2,2" IsChecked="{Binding OnlyMyCommissions}"/>            
         </DockPanel>
         
-        <ListBox Grid.Column="0" Grid.Row="1" BorderThickness="1" BorderBrush="Black" HorizontalContentAlignment="Stretch"
+        <ListBox Grid.Column="0" Grid.Row="1" BorderThickness="1" BorderBrush="Black" 
+                 HorizontalContentAlignment="Stretch" Margin="2"
                  ItemsSource="{Binding Commissions}"
                  SelectedItem="{Binding SelectedCommission}">
             <ListBox.ItemTemplate>
