minor changes in CommissionDecisionEditorView

--- a/CommissionsModule/Views/Decisions/CommissionDecisionEditorView.xaml
+++ b/CommissionsModule/Views/Decisions/CommissionDecisionEditorView.xaml
@@ -16,7 +16,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid IsEnabled="{Binding CanEdit}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
