--- a/AdminModule/Views/DatabaseValidation/DatabaseValidationView.xaml
+++ b/AdminModule/Views/DatabaseValidation/DatabaseValidationView.xaml
@@ -4,9 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:AdminModule.ViewModels"
+             xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+             xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModels:DatabaseValidationViewModel}">
+    <UserControl.Resources>
+        <converters:Converter x:Key="IsValidToImageConverter">
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                          To="pack://application:,,,/Core;Component/Resources/Images/Warning16x16.png" />
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                                          To="pack://application:,,,/Core;Component/Resources/Images/Error16x16.png" />
+        </converters:Converter>
+    </UserControl.Resources>
     <Grid HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
@@ -46,7 +56,7 @@
                         <StackPanel Orientation="Horizontal">
                             <Image Width="16"
                                    Height="16"
-                                   Source="pack://application:,,,/Core;Component/Resources/Images/Error16x16.png"
+                                   Source="{Binding IsValid, Converter={StaticResource IsValidToImageConverter}}"
                                    Margin="2"
                                    VerticalAlignment="Center" />
                             <TextBlock VerticalAlignment="Center"
