--- a/PatientInfoModule/Views/Info/InfoHeaderView.xaml
+++ b/PatientInfoModule/Views/Info/InfoHeaderView.xaml
@@ -109,7 +109,9 @@
                        Command="{Binding ContentViewModel.GoBackToPatientCommand, Mode=OneTime}"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/Back48x48.png" />
     </fluent:RibbonGroupBox>
-    <fluent:RibbonGroupBox Header="Амбул. карта" MinWidth="100">
+    <fluent:RibbonGroupBox Header="Амбулаторная карта" 
+                           MinWidth="150"
+                           HorizontalContentAlignment="Center">
         <fluent:Button Size="Large"
                        Header="Создать"
                        Command="{Binding ContentViewModel.CreateAmbCardCommand, Mode=OneTime}"
@@ -124,5 +126,17 @@
                        Header="Печать"
                        Command="{Binding ContentViewModel.PrintAmbCardCommand, Mode=OneTime}"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AmbCardPrint48x48.png" />
+    </fluent:RibbonGroupBox>
+    <fluent:RibbonGroupBox Header="Список назначений"
+                           MinWidth="150"
+                           HorizontalContentAlignment="Center">
+        <fluent:DropDownButton Header="Открыть"
+                               HorizontalAlignment="Center"
+                               LargeIcon="pack://application:,,,/Core;Component/Resources/Images/AssignmentList48x48.png"
+                               IsEnabled="{Binding ContentViewModel.PatientAssignmentListViewModel.PatientIsSelected}"
+                               IsDropDownOpen="{Binding ContentViewModel.PatientAssignmentListViewModel.StartAssignmentLoading, Mode=OneWayToSource}">
+            <ContentControl Content="{Binding ContentViewModel.PatientAssignmentListViewModel, Mode=OneTime}"
+                            MaxHeight="300" />
+        </fluent:DropDownButton>
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
