--- a/Shared/Shared.Patient/Themes/Generic.xaml
+++ b/Shared/Shared.Patient/Themes/Generic.xaml
@@ -1,8 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:viewModels="clr-namespace:Shared.Patient.ViewModels"
+                    xmlns:views="clr-namespace:Shared.Patient.Views">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/FoundPersonView.xaml" />
         <ResourceDictionary Source="../Views/PhotoView.xaml" />
         <ResourceDictionary Source="../Views/PersonSearchDialogView.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    <DataTemplate DataType="{x:Type viewModels:PatientAssignmentListViewModel}">
+        <views:PatientAssignmentListView />
+    </DataTemplate>
 </ResourceDictionary>
