--- a/CommissionsModule/Views/Decisions/CommissionDecisionsView.xaml
+++ b/CommissionsModule/Views/Decisions/CommissionDecisionsView.xaml
@@ -59,5 +59,9 @@
         </Grid>
         <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+        <ContentControl Content="{Binding NotificationMediator}"
+                        HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Stretch"
+                        VerticalAlignment="Bottom" />
     </Grid>
 </UserControl>
