Intermediate commist with CommissionProtocol editor
AddressView moved to Shared.Patient dll

--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -4,6 +4,10 @@
                     xmlns:viewModels="clr-namespace:CommissionsModule.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Views/Decisions/CommissionDecisionView.xaml" />
+
+        <ResourceDictionary Source="../Views/Protocols/PreliminaryProtocolView.xaml" />
+        <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
+        <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <DataTemplate DataType="{x:Type viewModels:CommissionDecisionEditorViewModel}">
