--- a/Shared/Shared.Patient/Views/AddressView.xaml
+++ b/Shared/Shared.Patient/Views/AddressView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="PatientInfoModule.Views.AddressView"
+﻿<UserControl x:Class="Shared.Patient.Views.AddressView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
-             xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
+             xmlns:viewModels="clr-namespace:Shared.Patient.ViewModels;assembly=Shared.Patient"
              xmlns:editors="http://wpfcontrols.com/"
              xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
              xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
