--- a/CommissionsModule/Views/Protocols/PreliminaryProtocolView.xaml
+++ b/CommissionsModule/Views/Protocols/PreliminaryProtocolView.xaml
@@ -7,48 +7,51 @@
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <DataTemplate DataType="{x:Type viewModels:PreliminaryProtocolViewModel}" >
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding Patient}" />
-            <ContentControl Grid.Row="0" Grid.Column="4" Grid.ColumnSpan="6" Content="{Binding AddressViewModel}"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding Patient}" />
+                <ContentControl Grid.Row="0" Grid.Column="4" Grid.RowSpan="6" Content="{Binding AddressViewModel}"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="0">Вид комиссии</TextBlock>
-            <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding CommissionTypes}" SelectedValue="{Binding SelectedCommissionTypeId}" SelectedValuePath="Id" />
-            <TextBlock Grid.Row="1" Grid.Column="2">Вопрос комиссии</TextBlock>
-            <ComboBox Grid.Row="1" Grid.Column="3" ItemsSource="{Binding CommissionQuestions}" SelectedValue="{Binding SelectedCommissionQuestionId}" SelectedValuePath="Id"/>
+                <TextBlock Grid.Row="1" Grid.Column="0">Вид комиссии</TextBlock>
+                <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding CommissionTypes}" SelectedValue="{Binding SelectedCommissionTypeId}" SelectedValuePath="Id" />
+                <TextBlock Grid.Row="1" Grid.Column="2">Вопрос комиссии</TextBlock>
+                <ComboBox Grid.Row="1" Grid.Column="3" ItemsSource="{Binding CommissionQuestions}" SelectedValue="{Binding SelectedCommissionQuestionId}" SelectedValuePath="Id"/>
 
-            <TextBlock Grid.Row="2" Grid.Column="0">Источник обращения</TextBlock>
-            <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding CommissionSources}" SelectedValue="{Binding SelectedCommissionSourceId}" SelectedValuePath="Id"/>
-            <TextBlock Grid.Row="2" Grid.Column="2">Направившее ЛПУ</TextBlock>
-            <ComboBox Grid.Row="2" Grid.Column="3" ItemsSource="{Binding SentLPUs}" SelectedValue="{Binding SelectedSentLPUId}" SelectedValuePath="Id"/>
+                <TextBlock Grid.Row="2" Grid.Column="0">Источник обращения</TextBlock>
+                <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding CommissionSources}" SelectedValue="{Binding SelectedCommissionSourceId}" SelectedValuePath="Id"/>
+                <TextBlock Grid.Row="2" Grid.Column="2">Направившее ЛПУ</TextBlock>
+                <ComboBox Grid.Row="2" Grid.Column="3" ItemsSource="{Binding SentLPUs}" SelectedValue="{Binding SelectedSentLPUId}" SelectedValuePath="Id"/>
 
-            <TextBlock Grid.Row="3" Grid.Column="0">Талон</TextBlock>
-            <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Talons}" SelectedValue="{Binding SelectedTalonId}" SelectedValuePath="Id"/>
-            <TextBlock Grid.Row="3" Grid.Column="2">Вид помощи</TextBlock>
-            <ComboBox Grid.Row="3" Grid.Column="3" ItemsSource="{Binding HelpTypes}" SelectedValue="{Binding SelectedHelpTypeId}" SelectedValuePath="Id"/>
+                <TextBlock Grid.Row="3" Grid.Column="0">Талон</TextBlock>
+                <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Talons}" SelectedValue="{Binding SelectedTalonId}" SelectedValuePath="Id"/>
+                <TextBlock Grid.Row="3" Grid.Column="2">Вид помощи</TextBlock>
+                <ComboBox Grid.Row="3" Grid.Column="3" ItemsSource="{Binding HelpTypes}" SelectedValue="{Binding SelectedHelpTypeId}" SelectedValuePath="Id"/>
 
-            <TextBlock Grid.Row="4" Grid.Column="0">Диагноз МКБ</TextBlock>
-            <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left">
-                <TextBox Text="{Binding MKB}" Width="100"></TextBox>
-                <Button Command="{Binding SelectMKBDiagnosCommand}" Margin="2,0,0,0">...</Button>
-            </StackPanel>
-            <TextBlock Grid.Row="4" Grid.Column="2">Дата принятия док-ов</TextBlock>
-            <DatePicker Grid.Row="4" Grid.Column="3" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" SelectedDate="{Binding IncomeDateTime}"/>
-            
+                <TextBlock Grid.Row="4" Grid.Column="0">Диагноз МКБ</TextBlock>
+                <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left">
+                    <TextBox Text="{Binding MKB}" Width="100"></TextBox>
+                    <Button Command="{Binding SelectMKBDiagnosCommand}" Margin="2,0,0,0">...</Button>
+                </StackPanel>
+                <TextBlock Grid.Row="4" Grid.Column="2">Дата принятия док-ов</TextBlock>
+                <DatePicker Grid.Row="4" Grid.Column="3" Width="190" HorizontalAlignment="Left" VerticalContentAlignment="Center" SelectedDate="{Binding IncomeDateTime}"/>
+
+
+            </Grid>
             <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
         </Grid>
