Minor changes in  CommissionProtocol

--- a/CommissionsModule/Themes/Generic.xaml
+++ b/CommissionsModule/Themes/Generic.xaml
@@ -8,9 +8,12 @@
         <ResourceDictionary Source="../Views/Protocols/PreliminaryProtocolView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonductView.xaml" />
         <ResourceDictionary Source="../Views/Protocols/CommissionСonclusionView.xaml" />
+
+        <ResourceDictionary Source="pack://application:,,,/Shared.PatientRecords;component/Views/Diagnoses/MKBTreeView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <DataTemplate DataType="{x:Type viewModels:CommissionDecisionEditorViewModel}">
         <views:CommissionDecisionEditorView/>
     </DataTemplate>
+
 </ResourceDictionary>
