--- a/CommissionsModule/Views/Protocols/CommissionСonclusionView.xaml
+++ b/CommissionsModule/Views/Protocols/CommissionСonclusionView.xaml
@@ -6,6 +6,7 @@
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <DataTemplate DataType="{x:Type viewModels:CommissionСonclusionViewModel}" >
         <Grid>
+            <TextBlock>Завершение комиссии</TextBlock>
             <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <ContentControl Content="{Binding FailureMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
         </Grid>
